--- a/source/_posts/2019-08-21-timeline.markdown
+++ b/source/_posts/2019-08-21-timeline.markdown
@@ -199,36 +199,161 @@ JumpSignalEmmiter:focus:checked
 
 Unity默认显示Mark Context只在绑定gameobject或者component的track上， 比如说Control Track就不显示。
 
-有时候有些自定义的signal emitter并不想出现在某些track里， 比如说一些用来控制全局的signal并不想出现在Animation Track里。一种最直接的方法直接修改TypeUtility.cs的方法:
+有时候有些自定义的signal emitter并不想出现在某些track里， 比如说一些用来控制全局的signal并不想出现在Animation Track里。一种最直接的方法针对对应的track添加一个Attribute, 并在中指定对应的TrackType:
 
 ```cs
-public static bool DoesTrackSupportTrackType(TrackAsset track, Type type)
+public enum TrackType
+{
+    NONE = 0,
+    MARKER = 1,
+    ANIMTION = 1 << 1,
+    CONTROL = 1 << 2,
+    ANCHOR = 1 << 3,
+    OTHER = 1 << 7 // put other at last
+}
+
+
+[AttributeUsage(AttributeTargets.Class)]
+
+public class MarkerAttribute : Attribute
+{
+    public TrackType supportType = default(TrackType);
+
+
+    public MarkerAttribute(TrackType type)
+    {
+        supportType = type;
+    }
+
+    public void AddType(TrackType type)
+    {
+        supportType |= type;
+    }
+
+    public bool SupportTrackType(TrackAsset track, Type type)
+    {
+        bool rst = false;
+        if (track is MarkerTrack)
+        {
+            rst = (supportType & TrackType.MARKER) > 0;
+        }
+        else if (track is AnimationTrack)
+        {
+            rst = (supportType & TrackType.ANIMTION) > 0;
+        }
+        else if (track is AnchorTrack)
+        {
+            rst = (supportType & TrackType.ANCHOR) > 0;
+        }
+        else if (track is ControlTrack)
+        {
+            rst = (supportType & TrackType.CONTROL) > 0;
+        }
+        return rst;
+    }
+
+}
+```
+
+
+针对每个Track设置好对应的track类型， 然后再TimelineContextMenu.cs 调用的地方制定特定的track：
+```cs
+ public static bool DoesTrackSupportMarkerType(TrackAsset track, Type type)
 {
     if (track.supportsNotifications)
     {
-        return type != typeof(JumpSignalEmmiter) && type != typeof(SlowSignalEmitter);
+        bool rst = true;
+        var attr = Attribute.GetCustomAttribute(type, typeof(MarkerAttribute)) as MarkerAttribute;
+        if (attr != null) rst = attr.SupportTrackType(track,type);
+        return rst;
     }
     return !typeof(INotification).IsAssignableFrom(type);
 }
 ```
+比如上述代码，自定义的JumpSignalEmmiter和SlowSignalEmitter， 就只会marker track里显示了。
 
 
-然后再TimelineContextMenu.cs 调用的地方制定特定的track：
+
+##### 3. 利用marker生成曲线
+
+自定义的Emitter 继承Marker， 只要不实现INotification, 就不会生成在全局广播。 利用Marker可以标记的性质(即在track里可编辑的关键帧)， 生成AnimationCurve， 同时不广播事件，还可以节省消耗。
+
+比如在track里标记一些节点：
 ```cs
-public static void AddMarkerMenuCommands(GenericMenu menu, TrackAsset track, Func<Type, IMarker> command, bool enabled)
+[Serializable]
+[CustomStyle("TransforSignalmEmitter")]
+[Marker(TrackType.ANCHOR | TrackType.MARKER)]
+public class AnchorSignalEmitter : Marker
 {
-    var markerTypes = TypeUtility.GetBuiltInMarkerTypes().Union(TypeUtility.GetUserMarkerTypes());
-    if (track != null)
+    [SerializeField] Vector3 m_Position = Vector3.zero;
+
+    public Vector3 position
     {
-        if (track is MarkerTrack)
-            markerTypes = markerTypes.Where(x => TypeUtility.DoesTrackSupportMarkerType(track, x));
-        else
-            markerTypes = markerTypes.Where(x => TypeUtility.DoesTrackSupportTrackType(track, x));
+        get { return m_Position; }
+        set { m_Position = value; }
     }
-    //...
+
 }
 ```
-比如上述代码，自定义的JumpSignalEmmiter和SlowSignalEmitter， 就只会marker track里显示了。
+
+然后再对应的track clip中生成曲线, 然后还可以在Track Clip中画出曲线:
+```cs
+ const int sample_cnt = 20;
+Vector3[] sample_vtx = new Vector3[sample_cnt];
+
+private void DrawAnchorAsset(AnchorAsset asset, double start, double end, int idx)
+{
+    FetchKeys(asset, start, end);
+    if (sample_vtx != null)
+    {
+        Handles.color = gizColors[idx % 3];
+        for (int i = 0; i < sample_cnt - 1; i++)
+        {
+            Handles.DrawLine(sample_vtx[i], sample_vtx[i + 1]);
+        }
+    }
+}
+
+private void FetchKeys(AnchorAsset asset, double start, double end)
+{
+    double dur = end - start;
+    double delta = dur / sample_cnt;
+    if (asset.IsValid())
+    {
+        for (int i = 0; i < sample_cnt; i++)
+        {
+            float time = (float)(start + delta * i);
+            float x = asset.clip_pos[0].Evaluate(time);
+            float y = asset.clip_pos[1].Evaluate(time);
+            float z = asset.clip_pos[2].Evaluate(time);
+            sample_vtx[i] = new Vector3(x, y, z);
+        }
+    }
+}
+
+ private void CreateClips()
+{
+    if (signals != null && signals.Count > 0)
+    {
+        AnimationCurve[] m_curves_pos=new AnimationCurve[3];
+        for (int i = 0; i < signals.Count; i++)
+        {
+            AnchorSignalEmitter sign = signals[i];
+            float time = (float)sign.time;
+            m_curves_pos[0].AddKey(time, sign.position.x);
+            m_curves_pos[1].AddKey(time, sign.position.y);
+            m_curves_pos[2].AddKey(time, sign.position.z);
+        }
+    }
+}
+```
+
+最后效果如图所示, 不但在track里画出了曲线， 而且在场景里还可以画出轨迹：
+
+![](/img/post-unity/cs9.jpg)
+
+对应的代码都上传到github上了， 欢迎点击[查阅][i5]。
+
 
 参考:
 
@@ -241,3 +366,4 @@ public static void AddMarkerMenuCommands(GenericMenu menu, TrackAsset track, Fun
 [i2]: https://kuaibao.qq.com/s/20190630AZO3MI00?refer=spider
 [i3]: https://github.com/Unity-Technologies/TimelineMarkerCustomization
 [i4]: https://docs.unity3d.com/Manual/UIE-USS.html
+[i5]: https://github.com/huailiang/timeline
