--- a/source/_posts/2019-07-18-vr.markdown
+++ b/source/_posts/2019-07-18-vr.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "AR探索"
+title:      "AR探索-固定标记识别"
 date:       2019-07-18 03:00:00
 author:     "Huailiang"
 tags:
