--- a/source/_posts/2019-08-08-recog.markdown
+++ b/source/_posts/2019-08-08-recog.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "camera动态图像识别"
+title:      "AR探索-camera动态图像识别"
 date:       2019-08-08 03:00:00
 author:     "Huailiang"
 tags:
