--- a/source/_posts/2018-03-06-vsdebug.markdown
+++ b/source/_posts/2018-03-06-vsdebug.markdown
@@ -174,6 +174,17 @@ Unity Shanderlab 代码高亮提示
 
 正所谓好刀不误砍柴功，有了更加强大的编辑器，我们写代码的效率也会相应的提升。
 
+
+## Unity2019升级问题
+
+最近把unity升级到2019版本， 在新版本中unity官方提供了以package的方式来支持vscode。 但是还是有一些问题， 比如说在vscode打开的情况下，在unity测双击代码，vscode不能自动跳转到对应的代码页， 有时候打开代码的时候只是welcode启动页。
+
+这时因为unity自带的vscode editor版本不是最新的， 你可以在菜单栏点击Windows->Package Manager, 此时你可以看到当前装的所有unity package plugin. 
+
+选中Visual Studio Code Editor, 在展开页中选中show all version, 升级到最新版本就正常了。
+
+![](/img/post-vscode/vs15.jpg)
+
 好了，今天的文章就到这里了，祝大家工作顺利。
 
 
