--- a/source/_posts/2018-03-06-vsdebug.markdown
+++ b/source/_posts/2018-03-06-vsdebug.markdown
@@ -4,8 +4,7 @@ title:      "Mac上用VS Code调试 Unity程序"
 date:       2018-03-06 11:00:00
 author:     "Huailiang"
 tags:
-    - Unity
-    - OSX
+    - 工具
 ---
 
 
@@ -177,6 +176,9 @@ Unity Shanderlab 代码高亮提示
 
 ## Unity2019升级问题
 
+##### 1. 跳转问题
+
+
 最近把unity升级到2019版本， 在新版本中unity官方提供了以package的方式来支持vscode。 但是还是有一些问题， 比如说在vscode打开的情况下，在unity测双击代码，vscode不能自动跳转到对应的代码页， 有时候打开代码的时候只是welcode启动页。
 
 这时因为unity自带的vscode editor版本不是最新的， 你可以在菜单栏点击Windows->Package Manager, 此时你可以看到当前装的所有unity package plugin. 
@@ -185,14 +187,21 @@ Unity Shanderlab 代码高亮提示
 
 ![](/img/post-vscode/vs15.jpg)
 
-好了，今天的文章就到这里了，祝大家工作顺利。
 
+
+##### 2. 自动补全
+
+如果在.vscodes的setting.json中隐藏了 ".sln" 和 ".csproj"， 自动补全就会消失，只要在VSCode的资源管理器中可以看到这两种文件，重启OmniSharp Server就好了。。。
+
+按F1键后输入： OmniSharp:Restart OmniSharp
 
 
 [i1]: https://code.visualstudio.com/docs/other/unity
 
-[i2]:https://www.microsoft.com/net/learn/get-started/macos
+[i2]: https://www.microsoft.com/net/learn/get-started/macos
 
-[i3]:https://code.visualstudio.com/Download
+[i3]: https://code.visualstudio.com/Download
 
-[i4]:http://www.mono-project.com/download/
+[i4]: http://www.mono-project.com/download/
+
+[i5]: https://www.jianshu.com/p/bd679b1a2db8?utm_campaign=maleskine&utm_content=note&utm_medium=seo_notes&utm_source=recommendation
