--- a/source/_posts/2019-11-23-face.markdown
+++ b/source/_posts/2019-11-23-face.markdown
@@ -26,10 +26,47 @@ tags:
 
 深度网络学习往往都需要一个强大的数据集， 比较有名的如微软的coco dataset, 还有南京大学周志华教授的《机器学习》里提到的西瓜数据集。这里我们使用引擎来生成数据集， 大致的原理论述如下：
 
-首先我们随机生成一组捏脸需要使用的参数，然后在使用这些参数在unity中生成不同的脸型，然后将camera的图像渲染到一张RenderTexture, RenderTexture设置的大小是512x512, 格式是R8G8B8A8, 具体参见下图：
-
-<center><img src="/img/post-ml/face3.jpg"></center><br>
-
+首先我们随机生成一组捏脸需要使用的参数，然后在使用这些参数在unity中生成不同的脸型，然后将camera的图像渲染到一张RenderTexture, RenderTexture设置的大小是512x512, 格式是R8G8B8A8, 具体参见如表：
+<div style="text-align: center;">
+<table border="1" style="font-size:14px">
+ <tr>
+    <th>参数</th>
+    <th>Value</th>
+</tr>          
+<tr>
+    <td>Dimension</td>
+    <td>2D</td>
+</tr>   
+<tr>
+    <td>Size</td>
+    <td>512</td>
+</tr>   
+<tr>
+    <td>Format</td>
+    <td>R8G8B8A8_UNORM</td>
+</tr>   
+<tr>
+    <td>Depth Buffer</td>
+    <td>At least 16 bits depth (no stencel)</td>
+</tr>   
+<tr>
+    <td>Enable Mipmap</td>
+    <td>False</td>
+</tr>   
+<tr>
+    <td>Wrap Mode</td>
+    <td>Clamp</td>
+</tr>
+<tr>
+    <td>Filter Mode</td>
+    <td>Bilinear</td>
+</tr>  
+<tr>
+    <td>Aniso Level</td>
+    <td>0</td>
+</tr>  
+</table>
+</div>
 最后将RenderTexture内容转换保存到一张jpg图片中，具体实现的代码如下：
 ```c#
 Texture2D tex = new Texture2D(rt.width, rt.height, TextureFormat.RGBA32, false);
@@ -50,7 +87,7 @@ catch (IOException ex)
 
 同时我们将每一张图片对应的捏脸参数保存在一个二进制文件中，名字为db_description， 记录格式如下：
 
-图片数量-[图片名-params][loop]
+图片数量-[图片名-params][loop]  (loop=图片数量)
 
 由于Unity渲染每一帧画面都需要等到每一帧的最后，而我们又希望每一帧尽量输出可能多的图片，因此每一帧的都不会卸载上次渲染完的RenderTexture，故你需要保留足够的内存来生成数据集。在这里我们建议你的电脑需要有16G内存， 生成20000张图片应该足够了。生成训练集的时候，我们故意对params加入一些混淆， 生成一些噪点，用来防止生成的neural network产生过拟合。
 
@@ -198,9 +235,9 @@ $$ \begin{eqnarray}
 其中参数 Alpha 用于平衡两个任务的重要性。上文中提到的特征提取器如图 6 所示，作者使用了梯度下降法来解决下面这个优化问题：
 
 
-$$ \underset{x}{\operatorname{min}}\, L_S(x, y_r) $$
+$$ \underset{x}{\operatorname{min}}\, \zeta_S(x, y_r) $$
 
-$$ S.t.  x_i \in [0, 1] $$
+$$ s.t.  x_i \in [0, 1] $$
 
 其中：
 
@@ -222,8 +259,15 @@ $$  x \leftarrow x - \mu \frac{\delta \zeta_S}{\delta x} (\mu: learning rate)$$
 （上图红色曲线是余弦相似度的变化， 实际l1=1-cos）
 
 
+<br>
+
+### 附录:
+[引擎里裁掉头发的imitator model][i5]
+[引擎里完整显示头发、脖子等非脸 imitatormodel][i6]
 
 [i1]: https://github.com/huailiang/face-nn
 [i2]: https://github.com/huailiang/knead_proj
 [i3]: https://arxiv.org/abs/1909.01064
 [i4]: https://www.cnblogs.com/dsgcBlogs/p/8619566.html
+[i5]: https://pan.baidu.com/s/1RWmvCJHOeXSFDxERQ26mUg
+[i6]: https://pan.baidu.com/s/1z0YvwsfBAFnhETjj0Zby-g
