--- a/source/_posts/2018-02-22-luafix.markdown
+++ b/source/_posts/2018-02-22-luafix.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "龙之谷如何使用lua做热更新的"
+title:      "如何使用lua做热更新的"
 date:       2018-02-22 12:00:00
 author:     "Huailiang"
 tags:
